--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -308,6 +308,7 @@
 		</footer>
 		<!-- end footer -->
 
+		<script src="{% static 'plugins/dygraphs/dygraph-combined.js' %}"></script>
 		<script src="{% static 'landing/js/jquery.js' %}"></script>
 		<script src="{% static 'landing/js/bootstrap.min.js' %}"></script>
 		<script src="{% static 'landing/js/wow.min.js' %} "></script>
