--- a/dashboard/templates/admin/admin_sensorType_edit.html
+++ b/dashboard/templates/admin/admin_sensorType_edit.html
@@ -58,7 +58,7 @@
         <!-- /.box-body -->
         <div class="box-footer">
           <a href="{% url 'sensorTypeList' %}" class="btn btn-default">Regresar</a>
-          <button type="submit" class="btn btn-primary">{% if form.initial %}Editar {% else %}Agregar {% endif %} Sensor</button>
+          <button type="submit" class="btn btn-primary">{% if form.initial %} Guardar {% else %} Crear {% endif %} Sensor</button>
         </div>
         <!-- /.box-footer -->
         </form>
