--- a/dashboard/templates/admin/admin_sensorType_list.html
+++ b/dashboard/templates/admin/admin_sensorType_list.html
@@ -29,6 +29,8 @@
                   <th>Nombre Sensor</th>
                   <th>Descripción</th>
                   <th>Modelo</th>
+                  <th>Simbolo</th>
+                  <th>Decimales</th>
                   <th>Accion</th>
                 </tr>
               </thead>
@@ -40,6 +42,8 @@
                   <td>{{sensor.name}}</td>
                   <td> {{sensor.description}} </td>
                   <td> {{sensor.model}} </td>
+                  <td> {{sensor.simbolo}} </td>
+                  <td> {{sensor.decimales}} </td>
 
                   <td>
                     <div class="btn-group">
